# zot

./: .bazelignore  .bazelrc  .editorconfig  .gitattributes  .gitignore  .golangci.yaml  .travis.yml  BUILD.bazel  CODEOWNERS  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Dockerfile  Dockerfile-arch  Dockerfile-arch-minimal  Dockerfile-arch-zb  Dockerfile-arch-zxp  Dockerfile-conformance  Dockerfile-minimal  Dockerfile-zb  Dockerfile-zxp  Dockerfile.build  LICENSE  LocalDockerfile  MAINTAINERS.md  Makefile  Makefile.bazel  NOTICE  README.md  README_APIkeys.md  README_fuzz.md  SECURITY.md  THIRD-PARTY-LICENSES.md  WORKSPACE  codecov.yml  firebase.json  go.mod  go.sum  golangcilint.yaml  stacker-conformance.yaml  (+4 more)
cmd/zot/: BUILD.bazel  main.go  main_test.go  stdout
docs/: BLOB_STREAMING_SYNC.md  BUILD.bazel  SocialLogin.md  ZotPlugins.md  aws_databases.md  cache_databases.md  docs.go  docs_test.go  storage-refactoring-proposal.md  swagger.json
docs/image-stream/: README.md  go.mod  main.go
docs/repository-info-store-access/: repository_store_access.md
pkg/api/: BUILD.bazel  auth.go  authn.go  authn_internal_test.go  authn_test.go  authz.go  authz_internal_test.go  bearer.go  bearer_auth.go  bearer_auth_internal_test.go  bearer_aws_secrets_manager.go  bearer_aws_secrets_manager_test.go  bearer_oidc.go  bearer_oidc_internal_test.go  bearer_oidc_test.go  bearer_test.go  blob_content_type_test.go  blob_range_internal_test.go  cache_factory.go  cluster_proxy.go  config.go  controller.go  controller_internal_test.go  controller_test.go  cookiestore.go  errors.go  errors_test.go  htpasswd.go  htpasswd_test.go  ldap.go  listener.go  listener_internal_test.go  log.go  logout_internal_test.go  mtls_test.go  openid_claim_mapping_internal_test.go  proxy.go  proxy_internal_test.go  proxy_test.go  quota.go  (+20 more)
pkg/api/config/: config.go  config_elevated_test.go  config_internal_test.go  config_test.go  http_timeout_accessors_test.go  loader.go  validator.go
pkg/api/constants/: consts.go  consts_test.go  extensions.go
pkg/api/errors/: errors.go  errors_test.go
pkg/api/zot/: cache.db
pkg/cli/: BUILD.bazel  cli.go  cli_command_interface.go  client.go  client_elevated_test.go  client_sudo_test.go  client_test.go  client_utils_test.go  config.goconvey  config_cmd.go  config_cmd_test.go  config_reloader.go  config_reloader_test.go  cveCmd.go  cveCmd_test.go  cveSearchService.go  cveSearchers.go  cve_cmd.go  cve_cmd_test.go  cves_cmd.go  cves_sub_cmd.go  discover.go  extensions_test.go  gql_queries.go  gql_queries_test.go  image_cmd.go  image_cmd_test.go  image_sub_cmd.go  images_cmd.go  images_sub_cmd.go  minimal.go  referrers_cmd.go  referrers_cmd_test.go  repo_cmd.go  repo_sub_cmd.go  repo_test.go  repos_cmd.go  repos_sub_cmd.go  repos_test.go  root.go  (+13 more)
pkg/cli/client/: cli.go  client.go  client_test.go  config.go  config_cmd.go  config_cmd_deprecated.go  config_cmd_deprecated_test.go  config_cmd_internal_test.go  config_cmd_test.go  config_test.go  cve_cmd_internal_test.go  cve_cmd_test.go  cves_cmd.go  cves_sub_cmd.go  discover.go  elevated_internal_test.go  elevated_test.go  flags.go  flags_test.go  gql_queries.go  gql_queries_internal_test.go  gql_queries_test.go  image_cmd.go  image_cmd_internal_test.go  image_cmd_test.go  image_sub_cmd.go  internal_test.go  repo_cmd.go  repo_internal_test.go  repo_sub_cmd.go  repo_test.go  root.go  root_test.go  search_cmd.go  search_cmd_internal_test.go  search_cmd_test.go  search_functions.go  search_functions_internal_test.go  search_sub_cmd.go  server_info_cmd.go  (+5 more)
pkg/cli/cmdflags/: flags.go  flags_test.go
pkg/cli/server/: config_loader.go  config_reloader.go  config_reloader_test.go  extensions_test.go  retention_check.go  retention_check_test.go  root.go  root_test.go  schema.go  schema_test.go  stress_test.go  validate_sync_disabled.go  validate_sync_enabled.go  verify_retention.go  verify_retention_test.go  zot-config-schema.json
pkg/compliance/v1_0_0/: BUILD.bazel  check.go  check_test.go
pkg/extensions/: BUILD.bazel  README.md  README_apikey.md  README_imagetrust.md  README_mgmt.md  README_userprefs.md  _search.md  _zot.md  config.go  extension-config-disabled.go  extension-config.go  extension-metrics.go  extension-scrub.go  extension-search-disabled.go  extension-search.go  extension-sync-disabled.go  extension-sync.go  extension-ui-disabled.go  extension-ui.go  extension.go  extension_api_key.go  extension_api_key_disabled.go  extension_api_key_test.go  extension_events.go  extension_events_disabled.go  extension_events_disabled_test.go  extension_gqlplayground.go  extension_gqlplayground_disabled.go  extension_image_trust.go  extension_image_trust_disabled.go  extension_image_trust_disabled_test.go  extension_image_trust_test.go  extension_mcp.go  extension_mcp_disabled.go  extension_metrics.go  extension_metrics_disabled.go  extension_mgmt.go  extension_mgmt_debug.go  extension_mgmt_disabled.go  extension_mgmt_disabled_test.go  (+29 more)
pkg/extensions/config/: config.go  config_test.go  quota.go
pkg/extensions/events/: builder.go  common.go  events.go  events_disabled_test.go  events_test.go  extension.go  http_sink.go  http_sink_test.go  log_sink.go  minimal.go  nats_sink.go  nats_sink_test.go
pkg/extensions/imagetrust/: cosign.go  image_trust.go  image_trust_disabled.go  image_trust_disabled_test.go  image_trust_test.go  notation.go
pkg/extensions/lint/: lint-disabled.go  lint.go  lint_disabled.go  lint_signatures_test.go  lint_test.go
pkg/extensions/mcp/: build_image.go  (+4 more)
pkg/log/: BUILD.bazel  guidelines.md  log.go  log_test.go
pkg/storage/: BUILD.bazel  README.md  SHARED_BLOB_STORAGE_PROPOSAL.md  benchmark_databases_test.go  cache.go  cache_benchmark_test.go  cache_internal_test.go  cache_test.go  checkisimagesignature_test.go  common.go  common_test.go  lint-interface.go  local.go  local_elevated_test.go  local_test.go  objects_storage.go  objects_storage_test.go  regulator.go  scrub.go  scrub_test.go  storage.go  storage_controller.go  storage_fs.go  storage_fs_sudo_test.go  storage_fs_test.go  storage_test.go
(+1174 files in other folders)
