load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/anuvu/zot/cmd/zot",
    visibility = ["//visibility:private"],
    deps = ["//pkg/cli:go_default_library"],
)

go_binary(
    name = "zot",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["main_test.go"],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/cli:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
