load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "auth.go",
        "config.go",
        "controller.go",
        "errors.go",
        "ldap.go",
        "log.go",
        "regexp.go",
        "routes.go",
    ],
    importpath = "github.com/anuvu/zot/pkg/api",
    visibility = ["//visibility:public"],
    deps = [
        "//docs:go_default_library",
        "//errors:go_default_library",
        "//pkg/storage:go_default_library",
        "@com_github_getlantern_deepcopy//:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_json_iterator_go//:go_default_library",
        "@com_github_jtblin_go_ldap_client//:go_default_library",
        "@com_github_opencontainers_distribution_spec//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_swaggo_http_swagger//:go_default_library",
        "@in_gopkg_ldap_v2//:go_default_library",
        "@org_golang_x_crypto//bcrypt:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["controller_test.go"],
    data = [
        "//:exported_testdata",
    ],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "@com_github_nmcclain_ldap//:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
        "@in_gopkg_resty_v1//:go_default_library",
    ],
)
