load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "config_cmd.go",
        "cve_cmd.go",
        "image_cmd.go",
        "root.go",
        "searcher.go",
        "service.go",
    ],
    importpath = "github.com/anuvu/zot/pkg/cli",
    visibility = ["//visibility:public"],
    deps = [
        "//errors:go_default_library",
        "//pkg/api:go_default_library",
        "//pkg/storage:go_default_library",
        "@com_github_briandowns_spinner//:go_default_library",
        "@com_github_dustin_go_humanize//:go_default_library",
        "@com_github_json_iterator_go//:go_default_library",
        "@com_github_mitchellh_mapstructure//:go_default_library",
        "@com_github_olekukonko_tablewriter//:go_default_library",
        "@com_github_opencontainers_distribution_spec//:go_default_library",
        "@com_github_rs_zerolog//log:go_default_library",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "moderate",
    srcs = [
        "config_cmd_test.go",
        "cve_cmd_test.go",
        "image_cmd_test.go",
        "root_test.go",
    ],
    data = [
        "//:exported_testdata",
    ],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//errors:go_default_library",
        "//pkg/api:go_default_library",
        "//pkg/compliance/v1_0_0:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
        "@in_gopkg_resty_v1//:go_default_library",
    ],
)
