load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["log.go"],
    importpath = "github.com/anuvu/zot/pkg/log",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gorilla_mux//:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
    ],
)
