load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cache.go",
        "storage.go",
    ],
    importpath = "github.com/anuvu/zot/pkg/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//errors:go_default_library",
        "//pkg/log:go_default_library",
        "@com_github_apex_log//:go_default_library",
        "@com_github_g0rbe_go_chattr//:go_default_library",
        "@com_github_gofrs_uuid//:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_opencontainers_umoci//:go_default_library",
        "@com_github_opencontainers_umoci//oci/casext:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@io_etcd_go_bbolt//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = [
        "cache_test.go",
        "storage_test.go",
    ],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//errors:go_default_library",
        "//pkg/log:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_rs_zerolog//:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
    ],
)
