load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["check.go"],
    importpath = "github.com/anuvu/zot/pkg/compliance/v1_0_0",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/compliance:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
        "@com_github_smartystreets_goconvey//convey/reporting:go_default_library",
        "@in_gopkg_resty_v1//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["check_test.go"],
    data = [
        "//:exported_testdata",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/compliance:go_default_library",
        "@com_github_phayes_freeport//:go_default_library",
        "@in_gopkg_resty_v1//:go_default_library",
    ],
)
