load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "generated.go",
        "models_gen.go",
        "resolver.go",
    ],
    importpath = "github.com/anuvu/zot/pkg/extensions/search",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/extensions/search/cve:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/storage:go_default_library",
        "@com_github_99designs_gqlgen//graphql:go_default_library",
        "@com_github_99designs_gqlgen//graphql/introspection:go_default_library",
        "@com_github_vektah_gqlparser_v2//:go_default_library",
        "@com_github_vektah_gqlparser_v2//ast:go_default_library",
    ],
)
