load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "cve.go",
        "models.go",
    ],
    importpath = "github.com/anuvu/zot/pkg/extensions/search/cve",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "@com_github_aquasecurity_trivy//integration:go_default_library",
        "@com_github_aquasecurity_trivy//integration/config:go_default_library",
    ],
)
