load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cve.go",
        "models.go",
    ],
    importpath = "github.com/anuvu/zot/pkg/extensions/search/cve",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log:go_default_library",
        "@com_github_aquasecurity_trivy//integration:go_default_library",
        "@com_github_aquasecurity_trivy//integration/config:go_default_library",
        "@com_github_aquasecurity_trivy//pkg/report:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cve_test.go"],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/log:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
        "@in_gopkg_resty_v1//:go_default_library",
    ],
)
