load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "cve.go",
        "models.go",
    ],
    importpath = "github.com/anuvu/zot/pkg/extensions/search/cve",
    visibility = ["//visibility:public"],
    deps = [
        "//errors:go_default_library",
        "//pkg/log:go_default_library",
        "@com_github_aquasecurity_trivy//integration:go_default_library",
        "@com_github_aquasecurity_trivy//integration/config:go_default_library",
        "@com_github_aquasecurity_trivy//pkg/report:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/types:go_default_library",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["cve_test.go"],
    data = [
        "//:exported_testdata",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/log:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_smartystreets_goconvey//convey:go_default_library",
        "@in_gopkg_resty_v1//:go_default_library",
    ],
)
