load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "util.go",
    ],
    importpath = "github.com/anuvu/zot/pkg/extensions/search/utils",
    visibility = ["//visibility:public"],
    deps = ["@com_github_boltdb_bolt//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "db_test.go",
        "utils_test.go",
    ],
    data = [
        ":search_testdata",
    ],
    embed = [":go_default_library"],
)

filegroup(
    name = "search_testdata",
    srcs = glob([
        "testdata/**",
    ]),
    visibility = ["//visibility:public"],
)
